@@ -74,7 +74,7 @@ is available via the following table.
 </tr>
 
 <tr>
-<td>CoderInfo</td>
+<td><a href="CoderInfo.html">CoderInfo</a></td>
 
 <td>Report information about supported image formats (use with <a href="STL.html#coderInfoList">coderInfoList</a>())&nbsp;</td>
 </tr>
